--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,7 @@
     left: -100%;
     opacity: 0;
     transition: all 0.5s ease;
+    margin-left: 30%;
   }
   #navbar-logo {
     font-size: 25px;
