--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
   padding: 0;
   font-family: "DM Serif Text", serif;
 }
-/*heder i meni*/
+/*heder i meni                                                                 */
 .nav-container {
   width: 100%;
   background-color: var(--najtamnija);
@@ -148,7 +148,7 @@
 .main-slika-container {
   text-align: center;
 }
-/*ulogujte se*/
+/*ulogujte se                                                               */
 .modal {
   position: fixed;
   z-index: 10;
@@ -294,7 +294,130 @@
   display: none;
   color: var(--zelena);
 }
-/*media screen*/
+/*galerija                                                              */
+.wrapper-gallery {
+  margin: 0 20vw;
+}
+#index-gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 10px;
+  grid-template-areas: "gallery-h1 gallery-h1 gallery-h1 gallery-h1" "img1 img2 img3 img4" "img5 img6 img3 img7";
+  width: 80%;
+  margin: auto;
+  padding-bottom: 40px;
+}
+#index-gallery .gallery-img {
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+}
+#index-gallery h1 {
+  grid-area: gallery-h1;
+  padding: 20px;
+}
+#index-gallery .img1 {
+  grid-area: img1;
+  background-image: url("../images/img1.jpg");
+}
+#index-gallery .img2 {
+  grid-area: img2;
+  background-image: url("../images/img2.jpg");
+}
+#index-gallery .img3 {
+  grid-area: img3;
+  background-image: url("../images/img3.jpg");
+  height: 610px;
+}
+#index-gallery .img4 {
+  grid-area: img4;
+  background-image: url("../images/img4.jpg");
+}
+#index-gallery .img5 {
+  grid-area: img5;
+  background-image: url("../images/img5.jpg");
+}
+#index-gallery .img6 {
+  grid-area: img6;
+  background-image: url("../images/img6.jpg");
+}
+#index-gallery .img7 {
+  grid-area: img7;
+  background-image: url("../images/img7.jpg");
+}
+.gallery-img div {
+  width: 100%;
+  height: 100%;
+  background-color: var(--najtamnija);
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.gallery-img a {
+  font-size: 18px;
+  color: var(--krem);
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+}
+.gallery-img div:hover {
+  opacity: 0.8;
+  transition: all 100ms ease-in-out;
+}
+.img-window {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+.img-window img {
+  max-height: 80vh;
+  max-width: 80vw;
+}
+/*sledeca slika i prethodna slika                          */
+.img-btn-next {
+  display: block;
+  padding: 6px 10px;
+  border-radius: 4px;
+  background-color: var(--najtamnija);
+  position: fixed;
+  top: 48vh;
+  z-index: 500;
+  color: var(--krem);
+  cursor: pointer;
+  text-transform: uppercase;
+}
+.img-btn-next:hover {
+  opacity: 0.8;
+}
+.img-btn-prev {
+  display: block;
+  padding: 6px 10px;
+  border-radius: 4px;
+  background-color: var(--najtamnija);
+  position: fixed;
+  top: 48vh;
+  z-index: 500;
+  color: var(--krem);
+  cursor: pointer;
+  text-transform: uppercase;
+}
+.img-btn-prev:hover {
+  opacity: 0.8;
+}
+/*media screen                                                                             */
 @media screen and (max-width: 768px) {
   .nav-container {
     position: relative;
