--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@
   padding: 0;
   font-family: "DM Serif Text", serif;
 }
+body {
+  background-color: var(--najtamnija);
+}
 /*heder i meni                                                                 */
 .nav-container {
   width: 100%;
@@ -319,6 +322,8 @@
 #index-gallery h1 {
   grid-area: gallery-h1;
   padding: 20px;
+  color: var(--krem);
+  font-size: 35px;
 }
 #index-gallery .img1 {
   grid-area: img1;
@@ -552,6 +557,12 @@
   #index-gallery {
     width: unset;
     gap: unset;
+  }
+  .img-btn-next {
+    right: 0 !important;
+  }
+  .img-btn-prev {
+    left: 0 !important;
   }
 }
 @media screen and (max-width: 480px) {
