privremeni izgled pocetne
treba da dodam bolju sliku (viseg kvaliteta)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,41 @@ body {
   transition: all 0.3s ease-in-out;
   background: var(--krem);
 }
+/*pocetno                       */
+.intro-header {
+  display: flex;
+  height: 620px;
+  align-items: center;
+  background-color: #f4f4f4;
+  background-image: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/candle-on-a-table-with-a-rose-royalty-free-image-1582562759.jpg?crop=1.00xw:0.752xh;0,0.183xh&resize=1200:*");
+  background-position: 50% 50%;
+  background-size: cover;
+  color: var(--krem);
+}
+.intro-content {
+  width: 70%;
+  max-width: 1140px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.intro-text {
+  width: 80%;
+  margin-right: auto;
+  margin-bottom: 35px;
+  margin-left: auto;
+  text-shadow: 2px 2px 4px #000000;
+}
+.heading-jumbo {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 64px;
+  line-height: 80px;
+  text-transform: none;
+}
+.header-donji-txt {
+  opacity: 0.75;
+  font-size: 25px;
+}
 /*praznicna ponuda*/
 .main {
   background-color: var(--krem);
@@ -93,7 +128,7 @@ body {
   justify-self: center;
   width: 80%;
   margin: 0 auto;
-  height: 90vh;
+  height: 85vh;
 }
 .main-content {
   justify-self: start;
@@ -519,7 +554,7 @@ body {
     justify-self: center;
     width: 90%;
     margin: 0 auto;
-    height: 90vh;
+    height: 85vh;
     background-color: var(--krem);
   }
   .main-content {
@@ -563,623 +598,6 @@ body {
   }
   .img-btn-prev {
     left: 0 !important;
-    :root {
-      --smedja: #3a2618;
-      --svetlosmedja: #754c40;
-      --krem: #9a8873;
-      --najtamnija: #171614;
-      --zelena: #37423d;
-      --errorBoja: #d83434;
-      --ispravnaBoja: #58c258;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0 auto;
-      padding: 0;
-      font-family: "DM Serif Text", serif;
-    }
-    body {
-      background-color: var(--najtamnija);
-    }
-    /*heder i meni                                                                 */
-    .nav-container {
-      width: 100%;
-      background-color: var(--najtamnija);
-    }
-    .navbar {
-      display: grid;
-      grid-template-columns: 0.2fr auto 1fr;
-      align-items: center;
-      height: 80px;
-      width: 90%;
-      max-width: 1720px;
-      margin: 0 auto;
-    }
-    #navbar-logo {
-      color: var(--krem);
-      justify-self: start;
-      font-size: 32px;
-      font-family: "Satisfy", cursive;
-    }
-    #navbar-logo {
-      cursor: pointer;
-    }
-    .nav-meni {
-      display: grid;
-      grid-template-columns: repeat(5, auto);
-      list-style-type: none;
-      text-align: center;
-      width: 70%;
-      justify-self: end;
-      margin-left: 30%;
-    }
-    #logo {
-      text-decoration: none;
-    }
-    .nav-linkovi {
-      color: var(--krem);
-      text-decoration: none;
-      font-size: 19px;
-    }
-    .nav-linkovi:hover {
-      color: rgba(154, 136, 115, 0.5);
-      transition: all 0, 2s ease-out;
-    }
-    .nav-linkovi-btn {
-      background-color: var(--krem);
-      padding: 10px 20px;
-      border-radius: 4px;
-      color: var(--najtamnija);
-    }
-    .nav-linkovi-btn:hover {
-      background-color: transparent;
-      color: var(--krem);
-      padding: 9px 19px;
-      border-radius: 4px;
-      border: solid 1px var(--krem);
-      transition: all 0.3s ease-out;
-    }
-    .meni-toggle .bar {
-      width: 25px;
-      height: 3px;
-      margin: 5px auto;
-      transition: all 0.3s ease-in-out;
-      background: var(--krem);
-    }
-    /*pocetno                       */
-    .jumbotron {
-      height: 450px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-image: url("../images/jumbotron.jpg");
-      background-size: cover;
-      background-position: center;
-      width: 80%;
-      opacity: 0.7;
-      border-radius: 4px;
-      margin: 20px auto;
-    }
-    .transbox {
-      background-color: rgb(117, 76, 64, 0.5);
-      color: rgb(250, 235, 215);
-      width: 80%;
-      height: 300px;
-      text-align: center;
-      border-radius: 6px;
-    }
-    .lead1 {
-      margin-top: 100px;
-    }
-    .lead1,
-    .lead2 {
-      font-size: 25px;
-    }
-    .display-4 {
-      font-size: 40px;
-      font-family: "Satisfy", cursive;
-    }
-    /*praznicna ponuda*/
-    .main {
-      background-color: var(--krem);
-    }
-    .main-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      align-items: center;
-      justify-self: center;
-      width: 80%;
-      margin: 0 auto;
-      height: 85vh;
-    }
-    .main-content {
-      justify-self: start;
-      margin-left: 20px;
-      color: var(--najtamnija);
-    }
-    .main-content h1 {
-      font-size: 30px;
-    }
-    .main-content p {
-      margin-top: 20px;
-      font-size: 15px;
-    }
-    .main-btn {
-      background-color: var(--zelena);
-      font-size: 17px;
-      padding: 8px 20px;
-      border: none;
-      border-radius: 4px;
-      color: var(--najtamnija);
-      margin-top: 30px;
-      cursor: pointer;
-      position: relative;
-      transition: all 0.35s;
-      outline: none;
-    }
-    .main-btn a {
-      position: relative;
-      z-index: 2;
-      color: var(--najtamnija);
-      text-decoration: none;
-    }
-    .main-btn:after {
-      position: absolute;
-      content: "";
-      top: 0;
-      left: 0;
-      width: 0;
-      height: 100%;
-      transition: all 0.35s;
-      border-radius: 4px;
-      background: rgba(117, 76, 64, 0.4);
-      color: var(--najtamnija);
-    }
-    .main-btn:hover {
-      color: var(--najtamnija);
-    }
-    .main-btn:hover:after {
-      width: 100%;
-    }
-    #main-slika {
-      height: 50%;
-      width: 50%;
-    }
-    .main-slika-container {
-      text-align: center;
-    }
-    /*ulogujte se                                                               */
-    .modal {
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: none;
-    }
-    .modal-content {
-      background: #f4f4f4;
-      margin: 10% auto;
-      width: 60%;
-      box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2),
-        o 7px 20px 0 rgba(0, 0, 0, 0.2);
-      position: relative;
-      border-radius: 3px;
-      min-height: 500px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-    }
-    .close-btn {
-      position: absolute;
-      right: 3%;
-      font-size: 30px;
-      z-index: 3;
-    }
-    .close-btn:hover {
-      cursor: pointer;
-      color: var(--zelena);
-      transition: 0.2s ease-out;
-    }
-    .modal-content-levo {
-      background: linear-gradient(
-        90deg,
-        rgb(166, 109, 92) 0%,
-        rgb(117, 76, 64) 100%
-      );
-      border-radius: 0 3px 3px 0;
-      position: relative;
-      width: 100%;
-    }
-    #modal-slika {
-      width: auto;
-      height: 33%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-    .modal-content-desno {
-      border-radius: 0 3px 3px 0;
-      position: relative;
-      width: 100%;
-      background-color: rgba(154, 136, 115, 0.3);
-    }
-    .modal-form {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      height: 90%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: center;
-    }
-    .modal-form h1 {
-      font-size: 16px;
-      text-align: start;
-      margin-bottom: 16px;
-    }
-    .form-validacija {
-      margin-bottom: 8px;
-      width: 80%;
-    }
-    .form-validation.error {
-      margin-bottom: 8px;
-      position: relative;
-      border: 1px solid var(--errorBoja);
-      border-radius: 2px;
-    }
-    .form-validacija.valid {
-      margin-bottom: 8px;
-      position: relative;
-      border: 1px solid var(--ispravnaBoja);
-      border-radius: 2px;
-    }
-    .form-validacija p {
-      font-size: 13px;
-      margin-top: 8px;
-      color: var(--errorBoja);
-      top: 28px;
-      display: none;
-    }
-    .form-validacija.error p {
-      display: block;
-    }
-    .modal-input {
-      display: block;
-      padding-left: 8px;
-      outline: none;
-      border-radius: 2px;
-      border: none;
-      height: 32px;
-      width: 100%;
-      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.05);
-    }
-    .modal-input::placeholder {
-      color: var(--svetlosmedja);
-    }
-    .modal-input-btn {
-      width: 80%;
-      height: 32px;
-      border-radius: 2px;
-      background-color: var(--zelena);
-      outline: none;
-      border: none;
-      color: var(--krem);
-      font-size: 16px;
-    }
-    .modal-input-btn:hover {
-      cursor: pointer;
-      background-color: rgba(154, 136, 115, 0.3);
-      color: var(--zelena);
-      transition: all 0.4 ease-out;
-      border: 1px solid var(--zelena);
-      border-radius: 2px;
-    }
-    .modal-input-prijava {
-      margin-top: 16px;
-      color: var(--zelena);
-      width: 80%;
-      text-align: center;
-    }
-    .modal-input-prijava:hover {
-      cursor: pointer;
-      color: var(--najtamnija);
-    }
-    .uspesna-prijava {
-      display: none;
-      color: var(--zelena);
-    }
-    /*galerija                                                              */
-    .wrapper-gallery {
-      margin: 0 20vw;
-    }
-    #index-gallery {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-template-rows: auto;
-      gap: 10px;
-      grid-template-areas: "gallery-h1 gallery-h1 gallery-h1 gallery-h1" "img1 img2 img3 img4" "img5 img6 img3 img7";
-      width: 80%;
-      margin: auto;
-      padding-bottom: 40px;
-    }
-    #index-gallery .gallery-img {
-      width: 100%;
-      height: 300px;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      cursor: pointer;
-    }
-    #index-gallery h1 {
-      grid-area: gallery-h1;
-      padding: 20px;
-      color: var(--krem);
-      font-size: 35px;
-    }
-    #index-gallery .img1 {
-      grid-area: img1;
-      background-image: url("../images/img1.jpg");
-    }
-    #index-gallery .img2 {
-      grid-area: img2;
-      background-image: url("../images/img2.jpg");
-    }
-    #index-gallery .img3 {
-      grid-area: img3;
-      background-image: url("../images/img3.jpg");
-      height: 610px;
-    }
-    #index-gallery .img4 {
-      grid-area: img4;
-      background-image: url("../images/img4.jpg");
-    }
-    #index-gallery .img5 {
-      grid-area: img5;
-      background-image: url("../images/img5.jpg");
-    }
-    #index-gallery .img6 {
-      grid-area: img6;
-      background-image: url("../images/img6.jpg");
-    }
-    #index-gallery .img7 {
-      grid-area: img7;
-      background-image: url("../images/img7.jpg");
-    }
-    .gallery-img div {
-      width: 100%;
-      height: 100%;
-      background-color: var(--najtamnija);
-      opacity: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .gallery-img a {
-      font-size: 18px;
-      color: var(--krem);
-      text-decoration: none;
-      text-transform: uppercase;
-      text-align: center;
-    }
-    .gallery-img div:hover {
-      opacity: 0.8;
-      transition: all 100ms ease-in-out;
-    }
-    .img-window {
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.8);
-      position: fixed;
-      top: 0;
-      left: 0;
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 100;
-    }
-    .img-window img {
-      max-height: 80vh;
-      max-width: 80vw;
-    }
-    /*sledeca slika i prethodna slika                          */
-    .img-btn-next {
-      display: block;
-      padding: 6px 10px;
-      border-radius: 4px;
-      background-color: var(--najtamnija);
-      position: fixed;
-      top: 48vh;
-      z-index: 500;
-      color: var(--krem);
-      cursor: pointer;
-      text-transform: uppercase;
-    }
-    .img-btn-next:hover {
-      opacity: 0.8;
-    }
-    .img-btn-prev {
-      display: block;
-      padding: 6px 10px;
-      border-radius: 4px;
-      background-color: var(--najtamnija);
-      position: fixed;
-      top: 48vh;
-      z-index: 500;
-      color: var(--krem);
-      cursor: pointer;
-      text-transform: uppercase;
-    }
-    .img-btn-prev:hover {
-      opacity: 0.8;
-    }
-    /*media screen                                                                             */
-    @media screen and (max-width: 768px) {
-      .nav-container {
-        position: relative;
-      }
-
-      .nav-meni {
-        display: grid;
-        grid-template-columns: auto;
-        background: var(--krem);
-        margin: 0;
-        width: 100%;
-        position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 0;
-        transition: all 0.5s ease;
-      }
-      #navbar-logo {
-        font-size: 25px;
-        margin-left: 20px;
-      }
-      .nav-meni.active {
-        background-color: var(--najtamnija);
-        left: 0;
-        opacity: 1;
-        transition: all 0.5s ease;
-      }
-      .nav-linkovi {
-        text-align: center;
-        line-height: 60px;
-        width: 100%;
-        display: table;
-      }
-      .nav-linkovi:hover {
-        background-color: var(--krem);
-        color: var(--najtamnija);
-      }
-      .navbar {
-        width: 100%;
-      }
-      .nav-linkovi:hover,
-      .nav-linkovi-btn:hover {
-        background-color: var(--krem);
-        transition: all 0.2s ease-out;
-        color: var(--najtamnija);
-        width: 100%;
-      }
-      .navbar {
-        width: 100%;
-      }
-      .nav-meni li {
-        width: 100%;
-      }
-      .nav-linkovi-btn {
-        border: none;
-        padding: 0;
-        border-radius: 0;
-        background-color: var(--najtamnija);
-        color: var(--krem);
-        transition: all 0.4s ease-out;
-      }
-      .nav-linkovi-btn:hover {
-        border: none;
-        padding: 0;
-        border-radius: 0;
-      }
-      #mobilni-meni {
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        transform: translate(5%, 20%);
-      }
-      .meni-toggle .bar {
-        display: block;
-        cursor: pointer;
-      }
-
-      .meni-toggle:hover {
-        cursor: pointer;
-      }
-      #mobilni-meni.is-active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-      }
-      #mobilni-meni.is-active .bar:nth-child(2) {
-        opacity: 0;
-      }
-      #mobilni-meni.is-active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-      }
-      .main-container {
-        display: grid;
-        grid-template-columns: auto;
-        align-items: center;
-        justify-self: center;
-        width: 90%;
-        margin: 0 auto;
-        height: 85vh;
-        background-color: var(--krem);
-      }
-      .main-content {
-        justify-self: center;
-        color: var(--najtamnija);
-        width: 80%;
-        margin: 0;
-      }
-      .main-content h1 {
-        font-size: 40px;
-      }
-      .main-content p {
-        margin-top: 16px;
-        font-size: 20px;
-      }
-      #main-slika {
-        display: none;
-      }
-      .modal-content-levo {
-        display: none;
-      }
-      .modal-content {
-        grid-template-columns: auto;
-        margin: 15% auto;
-        width: 70%;
-        height: 70%;
-      }
-    }
-    @media screen and (max-width: 580px) {
-      .modal-content {
-        margin: 20% auto;
-        width: 90%;
-        height: 80%;
-      }
-      #index-gallery {
-        width: unset;
-        gap: unset;
-      }
-      .img-btn-next {
-        right: 0 !important;
-      }
-      .img-btn-prev {
-        left: 0 !important;
-      }
-    }
-    @media screen and (max-width: 480px) {
-      .main-content {
-        text-align: center;
-      }
-      .main-content h1 {
-        font-size: 42px;
-      }
-      .main-content p {
-        margin-top: 32px;
-        font-size: 22px;
-      }
-      .main-btn {
-        padding: 12px 36px;
-        margin-top: 40px;
-      }
-    }
   }
 }
 @media screen and (max-width: 480px) {
