--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,6 +457,61 @@ body {
 .img-btn-prev:hover {
   opacity: 0.8;
 }
+/*futer                                           */
+.footer {
+  padding: 40px 0;
+  background-color: var(--najtamnija);
+}
+.social {
+  text-align: center;
+  padding-bottom: 25px;
+  color: var(--krem);
+}
+.social a {
+  font-size: 24px;
+  color: inherit;
+  text-decoration: none;
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  border: 1px solid var(--krem);
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 8px;
+}
+.social a:hover {
+  color: var(--najtamnija);
+  background-color: var(--krem);
+  transition: 0.2s ease-out;
+}
+.list {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+}
+.list a {
+  color: var(--krem);
+  text-decoration: none;
+  opacity: 0.6;
+}
+.list a:hover {
+  opacity: 1;
+}
+.list li {
+  display: inline-block;
+  padding: 0 15px;
+}
+.copyright {
+  color: var(--krem);
+  margin-top: 15px;
+  text-align: center;
+  font-size: 15px;
+}
 /*media screen                                                                             */
 @media screen and (max-width: 768px) {
   .nav-container {
@@ -592,6 +647,10 @@ body {
   #index-gallery {
     width: unset;
     gap: unset;
+    display: table;
+  }
+  #index-gallery .img3 {
+    height: 305px;
   }
   .img-btn-next {
     right: 0 !important;
