--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ body {
   height: 620px;
   align-items: center;
   background-color: #f4f4f4;
-  background-image: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/candle-on-a-table-with-a-rose-royalty-free-image-1582562759.jpg?crop=1.00xw:0.752xh;0,0.183xh&resize=1200:*");
+  background-image: url("../images/pozadina.jpg");
   background-position: 50% 50%;
   background-size: cover;
   color: var(--krem);
@@ -657,6 +657,16 @@ body {
   }
   .img-btn-prev {
     left: 0 !important;
+  }
+  .intro-content {
+    width: 90%;
+  }
+  .heading-jumbo {
+    font-size: 35px;
+    line-height: 45px;
+  }
+  .header-donji-txt {
+    font-size: 20px;
   }
 }
 @media screen and (max-width: 480px) {
