--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -726,6 +726,13 @@ body {
   .header-donji-txt {
     font-size: 20px;
   }
+  .about-us-img {
+    height: 250px;
+    margin: 15px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 @media screen and (max-width: 480px) {
   .main-content {
