--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,6 +300,10 @@ body {
 .modal-input::placeholder {
   color: var(--svetlosmedja);
 }
+#obavestenja,
+label {
+  opacity: 0.7;
+}
 .modal-input-btn {
   width: 80%;
   height: 32px;
